re PR c++/25632 (ICE with const int copied into two different functions)

PR c++/25632
	* init.c (constant_value_1): Unshare use of DECL_INITIAL.  Fix a typo
	in condition.

From-SVN: r109354